--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
                         <p class="here-sub-title wow fadeInUp text-light" data-wow-delay=".3s">
                             <span>
                                 <span style="margin-top: 17px;display: block;" data-i18n="main_solutions_archethic">
-                                    Uniris helps you develop your solutions on the Public Blockchain
-                                    Archethic</span>
+                                    Uniris helps you develop your solutions on the Archethic Public Blockchain
+                                </span>
 
                             </span>
 
@@ -647,14 +647,15 @@
                         <h5 class="my-4" data-i18n="blockchain_earth_friendly_title">Earth-friendly</h5>
                         <p data-i18n="blockchain_earth_friendly_description">3.6 Billion times less energy consumption,
                             by using the ARCH (Atomic Rotating Commitment Heuristic) consensus based on heuristic
-                            miners' election and a polymorphic worldwide replication. Each Uniris transaction only needs
+                            miners' election and a polymorphic worldwide replication. Each Archethic transaction only
+                            needs
                             0.42w of energy (0.1g of sugar).</p>
                     </div>
                     <div class="col-md-3 col-sm-6 wow fadeInUp" data-wow-delay=".4s">
                         <i class="bi bi-bond f-icon"></i>
                         <h5 class="my-4" data-i18n="blockchain_smart_contracts_title">Smart-er Contracts</h5>
                         <p data-i18n="blockchain_smart_contracts_description">In addition to running the blockchain
-                            itself, Uniris smart contracts provide the community
+                            itself, Archethic smart contracts provide the community
                             On-Chain governance. Uniris smart-contracts are natively triggerable, upgradable, formal and
                             easy to program helping in development of reliable
                             applications.
@@ -663,7 +664,7 @@
                     <div class="col-md-3 col-sm-6 wow fadeInUp" data-wow-delay=".4s">
                         <i class="bi bi-plane f-icon"></i>
                         <h5 class="my-4" data-i18n="blockchain_safety_title">Aviation Safety</h5>
-                        <p data-i18n="blockchain_safety_description">Beyond just PoW (51%) or dBFT (66%), the Uniris
+                        <p data-i18n="blockchain_safety_description">Beyond just PoW (51%) or dBFT (66%), Archethic
                             blockchain provides a collaborative & Formal Proof-of-Work allowing to handle 90% of
                             malicious miners, ushering an inclusive and new age of decentralized security based on the
                             standards
@@ -753,7 +754,8 @@
                         <i class="bi bi-user-ID f-icon"></i>
                         <!--  bi-user-ID bi-bond -->
                         <h5 class="my-4" data-i18n="biometric_did_title">Dencentralized Identity</h5>
-                        <p data-i18n="biometric_did_description">Uniris blockchain makes it possible to store, share and
+                        <p data-i18n="biometric_did_description">Archethic blockchain makes it possible to store, share
+                            and
                             manage all the digital identities through smart contracts. It also helps in managing
                             organization structures, delegation of power, reputation & certification and finally make
                             the individual's identities self-sovereign.</p>
