--- a/index.html
+++ b/index.html
@@ -656,7 +656,8 @@
                         <h5 class="my-4" data-i18n="blockchain_smart_contracts_title">Smart-er Contracts</h5>
                         <p data-i18n="blockchain_smart_contracts_description">In addition to running the blockchain
                             itself, Archethic smart contracts provide the community
-                            On-Chain governance. Uniris smart-contracts are natively triggerable, upgradable, formal and
+                            On-Chain governance. Archethic smart-contracts are natively triggerable, upgradable, formal
+                            and
                             easy to program helping in development of reliable
                             applications.
                         </p>
