--- a/index.html
+++ b/index.html
@@ -754,7 +754,7 @@
                     <div class="col-md-3 col-sm-6 wow fadeInUp" data-wow-delay=".4s">
                         <i class="bi bi-user-ID f-icon"></i>
                         <!--  bi-user-ID bi-bond -->
-                        <h5 class="my-4" data-i18n="biometric_did_title">Dencentralized Identity</h5>
+                        <h5 class="my-4" data-i18n="biometric_did_title">Decentralized Identity</h5>
                         <p data-i18n="biometric_did_description">Archethic blockchain makes it possible to store, share
                             and
                             manage all the digital identities through smart contracts. It also helps in managing
