--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
                                     src="/assets/images/twitter.png" width="20px"></a>
                             <a href="https://www.linkedin.com/company/archethic-technologies" target="_blank"><img
                                     src="/assets/images/linkedin.png" width="20px"></a>
-                            <a href="https://discord.gg/CJZJvVReBx" target="_blank"><img
+                            <a href="https://discord.com/invite/bZv9aHN7bd" target="_blank"><img
                                     src="/assets/images/discord.png" width="20px"></a>
                             <a href="https://github.com/archethic-foundation" target="_blank"><img
                                     src="/assets/images/github.png" width="20px"></a>
